fix tab for day 1. Add day 2

--- a/work/duxwc_day2.html
+++ b/work/duxwc_day2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DUXWC - Day 1</title>
+  <title>DUXWC - Day 2</title>
   <link href="../css/reset.css" rel="stylesheet">
   <link href="../css/base.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,8 +36,8 @@
           <section>
             <article>
               <header class="article-header">
-                <h1 class="article-title">Daily UX Writing Challenge: Day 1</h1>
-                <p class="article-subtitle">Cancellation notification</p>
+                <h1 class="article-title">Daily UX Writing Challenge: Day 2</h1>
+                <p class="article-subtitle">Promotion screen</p>
                 <p class="article-subtitle">(concept piece)</p>
                 <!-- <img class="img" alt="" src="./images/2.jpg" /> -->
               </header>
@@ -45,16 +45,16 @@
                 <div class="body_title_desc">
                   <h2>The Problem</h2>
                   <h3>The Scenario</h3>
-                  <p class="body-regular">A traveler is in an airport waiting for the last leg of a flight home when
-                    their flight gets abruptly canceled due to bad weather.
+                  <p class="body-regular">A user is a working parent, and a big sports fan, in the midst of their
+                    favorite sports season who can no longer attend games.
                   </p>
                   <h3>The Challenge</h3>
-                  <p class="body-regular">Write a message from the airline app notifying them of the cancellation and
-                    what they need to do next.
+                  <p class="body-regular">Write a promotional screen for an app that lets a user choose teams, sends
+                    game reminders, real-time score updates and highlight videos.
                   </p>
                   <p class="body-regular">
-                    Headline: 45 characters <br>
-                    Body: 175 characters max <br>
+                    Headline: 40 characters max<br>
+                    Body: 175 characters max<br>
                     Button(s): 25 characters max</p>
                 </div>
 
@@ -70,49 +70,39 @@
 
                   <div class="dual-image-display">
                     <figure>
-                      <img class="img portrait" src="../images/work/duxwc/duxwc_1_push.jpg" />
-                      <figcaption>Flight cancellation push notification.</figcaption>
+                      <img class="img portrait" src="../images/work/duxwc/duxwc_2.jpg" />
+                      <figcaption>Sports app promotion screen.</figcaption>
                     </figure>
                   </div>
 
-                  <p class="body-regular">A push notification seemed appropriate for this scenario, for urgency and
-                    brevity.
+                  <p class="body-regular">I imagined this as an onboarding screen. The user is brimming with excitement
+                    to still be an active avid fan. They have just installed and opened the app.
                   </p>
 
-                  <p class="body-regular">The customer is likely feeling annoyed, frustrated, &/or frantic. We (the
-                    airline) want to meet them with empathy and be direct on next steps. In a short space, I try to
-                    communicate:
+                  <p class="body-regular">There are three messages I wanted to communicate:
                   </p>
 
-                  <ul class="indent">
-                    <li class="body-regular">What happened</li>
-                    <li class="body-regular">Why</li>
-                    <li class="body-regular">That their feelings are valid</li>
-                    <li class="body-regular">Next steps (options for paths forward)</li>
-                    <li class="body-regular">Something positive (this may not always be the case)</li>
-                  </ul>
+                  <ol class="indent">
+                    <li class="body-regular">Commending them for their dedication to the game, the team, and the
+                      community.</li>
+                    <li class="body-regular">Reaffirming that they’ve chosen the right app: We have the features that’ll
+                      get them as close to the game as possible, when they can’t physically be there. </li>
+                    <li class="body-regular">Assuring them that the app is a low-effort commitment. All they do is set
+                      it and we’ll never let them forget it (in a good way).</li>
+                  </ol>
 
-                  <p class="body-regular">There may not always be a reason ‘why’ that the airline can share with the
-                    customer. For inclement weather, it does feel appropriate. It provides the customer an important
-                    context that may factor into how to proceed with making new arrangements.
-                  </p>
-
-                  <p class="body-regular">The last two ideas are dependent on what the airline process may be. As a UX
-                    Writer, I’d need to
-                    work with our customer services team to find out exactly what the airline is able to offer. Of
-                    these, I felt strongly about offering the customer different paths forward. They may be digitally
-                    savvy and able to move forward with minimal assistance. But they may not be. Or they are until they
-                    are in a high-pressure situation. We’d like to respect that preference and meet them where they are
-                    most comfortable, especially when they are in a lurch.
+                  <p class="body-regular">With that last idea in mind, the CTA cuts right to the action. They’ve found a
+                    moment to search for and install an app, so it's likely also a good time to get them onboarded where
+                    they might not have the luxury of a free moment again for a while.
                   </p>
 
                 </div>
 
                 <div class="body_title_desc">
                   <h2>The Big 'So What?'</h2>
-                  <p class="body-regular">Even in negative situations, there’s room to build trust. Approaching these
-                    critical scenarios with empathy and transparency goes a long way. For the customer, what matters is
-                    that they don’t feel abandoned. For the company’s, it’s an investment toward returning customers.
+                  <p class="body-regular">There’s a reason why users look for apps. Listing features of an app can be a
+                    great draw. But even greater value is the benefits to the user in terms of the impact it has on
+                    their current life context.
                   </p>
                 </div>
 
