tidy code day 5. add day 6.

--- a/work/duxwc_day6.html
+++ b/work/duxwc_day6.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DUXWC - Day 5</title>
+  <title>DUXWC - Day 6</title>
   <link href="../css/reset.css" rel="stylesheet">
   <link href="../css/base.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,8 +36,8 @@
           <section>
             <article>
               <header class="article-header">
-                <h1 class="article-title">Daily UX Writing Challenge: Day 5</h1>
-                <p class="article-subtitle">Error message - app closed unexpectedly</p>
+                <h1 class="article-title">Daily UX Writing Challenge: Day 6</h1>
+                <p class="article-subtitle">Alert message</p>
                 <p class="article-subtitle">(concept piece)</p>
                 <!-- <img class="img" alt="" src="./images/2.jpg" /> -->
               </header>
@@ -45,18 +45,17 @@
                 <div class="body_title_desc">
                   <h2>The Problem</h2>
                   <h3>The Scenario</h3>
-                  <p class="body-regular">The user works in graphic design. While critiquing a design in a mobile app,
-                    their phone abruptly turns off. When they restart the phone, they reopen the app.
+                  <p class="body-regular">It’s Monday. A user has just gotten into their car to drive to work. They plug
+                    their phone into the car and start driving.
                   </p>
                   <h3>The Challenge</h3>
-                  <p class="body-regular">Write a message that the user will read immediately upon opening the app. What
-                    do they need to know? What steps (if any) do they need to take to recover their content? What if
-                    they can't recover the content?
+                  <p class="body-regular">How would you let the user know there’s a fire happening in a nearby town that
+                    is causing road closures? The effect on their commute is unknown, but there is a definite danger if
+                    the fire gets closer. How do you communicate this to them? When? Write it.
                   </p>
                   <p class="body-regular">
-                    Headline: 40 characters max<br>
-                    Body: 140 characters max<br>
-                    Button(s): 20 characters max
+                    Headline: 30 characters max<br>
+                    Body: 45 characters max
                   </p>
                 </div>
 
@@ -72,38 +71,31 @@
 
                   <div class="dual-image-display">
                     <figure>
-                      <img class="img portrait" src="../images/work/duxwc/duxwc_5a.jpg" />
-                      <figcaption>Unrecoverable progress.</figcaption>
-                    </figure>
-                    <figure>
-                      <img class="img portrait" src="../images/work/duxwc/duxwc_5b.jpg" />
-                      <figcaption>Automatically saved progress.</figcaption>
+                      <img class="img portrait" src="../images/work/duxwc/duxwc_6_push.jpg" />
+                      <figcaption>Navigation alert.</figcaption>
                     </figure>
                   </div>
 
-                  <p class="body-regular">A modal seemed appropriate here, for both situations.
+                  <p class="body-regular">A push notification is the best way to communicate urgent messages. A user can
+                    see (or hear or feel, depending on sound and haptic settings) it right away without unlocking their
+                    phone or opening an app.
                   </p>
 
-                  <p class="body-regular">My approach was to be upfront and factual while still being sympathetic. In a
-                    situation where we have a benefit of recovery, I am comfortable using a slightly more relaxed tone.
-                  </p>
-
-                  <p class="body-regular">The user is likely feeling mildly inconvenienced at best and irate at worst,
-                    depending on the severity and permanency of the loss. I keep the message concise so they can get
-                    back to work as quickly as possible. At the same time it is important to let them know that we are
-                    concerned about the issue, and care about their experience with our product. I offer them an
-                    opportunity to file a report, to help us in an endeavor of preventing the issue from happening
-                    again.
+                  <p class="body-regular">In this situation the user is driving and can only afford a glance at their
+                    screen. The information must be succinct and direct. Push notifications bring the user within a tap
+                    of further information, if they feel it’s needed. This notification was designed with the idea that
+                    the navigation app opens to display the affected area, and suggest alternative routes with estimated
+                    commute times.
                   </p>
 
                 </div>
 
                 <div class="body_title_desc">
                   <h2>The Big 'So What?'</h2>
-                  <p class="body-regular">Digital products are as human as the people who build them. They’re not
-                    perfect. It is important to own up to mistakes and shortcomings. If something isn’t working or stops
-                    working, it is ok to acknowledge to our customers that although we’ve let them down, we do care and
-                    would like to do better.
+                  <p class="body-regular">Always consider the context of the user. They may be greatly restricted in how
+                    much attention they can, should, or are willing to afford. As important as the in-app or in-device
+                    experience is, we should pay equal attention to the environment in which it exists. We need to
+                    design for both.
                   </p>
                 </div>
 
