day 15. style fix day 14

--- a/work/duxwc_day14.html
+++ b/work/duxwc_day14.html
@@ -44,8 +44,9 @@
                 <div class="body_title_desc">
                   <h2>The Problem</h2>
                   <h3>The Scenario</h3>
-                  <p>A user is shopping using a price comparison app that boasts “real-time” pricing on items. As they
-                    are checking the price of an item, something goes wrong. The problem is unknown.
+                  <p class="body-regular">A user is shopping using a price comparison app that boasts “real-time”
+                    pricing on items. As they are checking the price of an item, something goes wrong. The problem is
+                    unknown.
                   </p>
 
                   <h3>The Challenge</h3>
@@ -54,7 +55,7 @@
                   </p>
 
                   <p class="body-regular">
-                    Title: 30 characters max<br>
+                    Headline: 30 characters max<br>
                     Body: 120 characters max<br>
                     Button(s): 15 characters max
                   </p>
