update about page. add email link

--- a/xindex.html
+++ b/xindex.html
@@ -37,7 +37,7 @@
             <div class="content-grid">
 
               <div class="image_title">
-                <a>
+                <a href="./work/handshake_mobile_app.html">
                   <img class="img landscape" alt="" src="./images/handshake/handshake.svg" />
                   <h2>Handshake Mobile App</h2>
                 </a>
@@ -65,6 +65,7 @@
       <footer class="footie">
         <div class="socials-links">
           <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="./assets/LI-In-Bug.png"></a>
+          <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="../assets/email.png"></a>
           <a href="https://github.com/EvyHaan"><img class="social-icon" src="./assets/GitHub-Mark-64px.png"></a>
         </div>
       </footer>
