--- a/pageComponents.html
+++ b/pageComponents.html
@@ -35,7 +35,7 @@
 
         <main class="mainie">
           <!-- USE THIS SECTION FOR A CONTENT GRID, i.e. LIST OF PROJECTS -->
-          <section>
+          <!-- <section>
             <div class="content-grid">
 
               <div class="image_title">
@@ -46,18 +46,18 @@
               </div>
 
             </div>
-          </section>
+          </section> -->
 
           <!-- USE THIS SECTION FOR AN ARTICLE, i.e. PROJECT DETAILS, ABOUT ME, RESOURCES -->
-          <!-- <section>
+          <section>
             <article>
               <header class="article-header">
                 <h1 class="article-title">Article Title</h1>
                 <p class="article-subtitle">Article subtitle.</p>
-                <img class="img" alt="" src="./images/2.jpg" />
+                <!-- <img class="img" alt="" src="./images/2.jpg" /> -->
               </header>
 
-              <div class="tri-image-display">
+              <!-- <div class="tri-image-display">
                 <figure>
                   <img class="img portrait" src="./images/work/handshake/handshake_sign_up_after.svg" />
                   <figcaption>Fig #. Caption for the BOTTOM L image.</figcaption>
@@ -110,17 +110,22 @@
                     <li class="body-regular">Content Design</li>
                     <li class="body-regular">Microcopy</li>
                   </ul>
-                </div>
+                </div> -->
 
-              <div class="link_icon">
-                  <a>
-                    A Link Text.
-                    <img class="il-ic" src="./assets/open-in-new-window.png" />
-                  </a>
-                </div>
+              <!-- <div class="link_icon">
+                <a>
+                  A Link Text.
+                  <img class="il-ic" src="./assets/open-in-new-window.png" />
+                </a>
+              </div> -->
+
+              <div class="icon_text">
+                <img class="il-ic" src="./images/about/briefcase.png" />
+                <p class="body-regular">A text.</p>
+              </div>
 
             </article>
-          </section> -->
+          </section>
         </main>
       </div>
 
