finish work grid. route links. tidy css. review mobile and desktop views

--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
                   <h2>Contact Me For</h2>
                   <ul class="indent">
                     <li class="body-regular">content design help (freelance, contract, or full-time)</li>
-                    <li class="body-regular">career transition questions (especially if you're brining a non-traditional
-                      background to tech!)</li>
+                    <li class="body-regular">career transition questions (especially if you're bringing a
+                      non-traditional background to tech!)</li>
                     <li class="body-regular">networking</li>
                     <li class="body-regular">really good bad puns</li>
                   </ul>
