--- a/index.html
+++ b/index.html
@@ -6,48 +6,165 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evy Haan Portfolio</title>
+  <!-- <link rel="icon" type="image/x-icon" href="/images/initials.svg"> -->
   <link href="css/reset.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/layout.css" rel="stylesheet">
-  <link href="css/module.css" rel="stylesheet">
+  <link href="css/base.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai&family=Mulish&family=Playfair+Display&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
     rel="stylesheet">
 </head>
 
-<body class="container">
-  <div class="wrapper">
-    <nav class="top-nav">
-      <a class="home nav" href="index.html"><img src="./images/initials.svg"></a>
-      <a class="work nav" href="work.html">WORK</a>
-      <a class="hello nav" href="hello.html">HELLO</a>
-    </nav>
+<body>
+  <div class="outtie">
+    <div class="innie">
 
-    <main class="main">
-      <h1 class="page-header">Hi There!</h1>
-      <div class="main-content">
-        <section class="intro">
-          <img class="profile-pic" src="images/self-pic.jpg" />
-          <h2>I'm Evy.</h2>
-          <div>
-            <p>Content Designer.</p>
-            <p>Software Engineer.</p>
-            <p>Curious dabbler.</p>
+      <div class="therest">
+        <header class="headie">
+          <nav class="site-nav">
+            <a class="site-nav-item" href="./index.html">work</a>
+            <a class="site-nav-item" href="./about.html">about</a>
+            <!-- <a class="site-nav-item">resources</a> -->
+          </nav>
+          <div class="site-header">
+            <p class="site-title">Evy Haan</p>
+            <p class="site-subtitle">Content Designer | Curious Dabbler</p>
           </div>
-          <a href="/work.html">See my work</a>
-        </section>
+        </header>
+
+        <main class="mainie">
+          <section>
+            <div class="content-grid">
+
+              <div class="image_title">
+                <a href="./work/handshake_mobile_app.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/handshake_app_cover.jpg" />
+                  <h2>Handshake Mobile App</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day15.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_15_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 15</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day14.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_14_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 14</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day13.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_13_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 13</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day12.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_12_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 12</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day11.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_11_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 11</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day10.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_10_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 10</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day9.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_9_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 9</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day8.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_8_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 8</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day7.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_7_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 7</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day6.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_6_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 6</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day5.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_5_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 5</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day4.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_4_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 4</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day3.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_3_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 3</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day2.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_2_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 2</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
+                <a href="./work/duxwc_day1.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/duxwc_1_cover.jpg" />
+                  <h2>Daily UX Writing Challenge - Day 1</h2>
+                </a>
+              </div>
+
+            </div>
+          </section>
+
+        </main>
       </div>
-    </main>
 
-    <footer class="footer">
-      <h3>Let's connect!</h3>
-      <ul class="social-links">
-        <li><a href="https://www.linkedin.com/in/evyhaan/"><img class="li-in-bug" src="./assets/LI-In-Bug.png"></a></li>
-      </ul>
-    </footer>
+      <footer class="footie">
+        <div class="socials-links">
+          <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="./assets/LI-In-Bug.png"></a>
+          <a href="mailto: evy.haan@gmail.com"><img class="social-icon" src="../assets/email.png"></a>
+          <a href="https://github.com/EvyHaan"><img class="social-icon" src="./assets/GitHub-Mark-64px.png"></a>
+        </div>
+      </footer>
+
+
+    </div>
   </div>
-
 </body>
 
 </html>
