--- a/work/duxwc_day3.html
+++ b/work/duxwc_day3.html
@@ -116,7 +116,7 @@
                     </a>
                   </div>
                 </div>
-
+              </div>
             </article>
           </section>
         </main>
