activate resources page links

--- a/resources.html
+++ b/resources.html
@@ -41,7 +41,7 @@
               <div class="article-body">
                 <p class="body-regular">These have been my go-tos for exploring topics and tools in content design. I’ll
                   continue to add to this list. It is by no means exhaustive - there are a ton of resources out there
-                  (many for free!). Ask me what else I've been keeping eyes on! 👀</p>
+                  (many for free!) Ask me what else I've been keeping eyes on! 👀</p>
 
                 <div class="body_title_desc">
                   <h2>Learning</h2>
