--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <nav class="site-nav">
             <a class="site-nav-item" href="./index.html">work</a>
             <a class="site-nav-item" href="./about.html">about</a>
-            <!-- <a class="site-nav-item">resources</a> -->
+            <a class="site-nav-item" href="./resources.html">resources</a>
           </nav>
           <div class="site-header">
             <p class="site-title">Evy Haan</p>
