fix typos on resources page

--- a/resources.html
+++ b/resources.html
@@ -84,7 +84,7 @@
                     <li class="body-regular"><a href="https://dailyuxwriting.com/">Daily UX Writing Challenge</a> - Join
                       the Facebook group for invaluable feedback!</li>
                     <li class="body-regular"><a href="https://dailyuxwriting.com/conversation-design-challenge">Daily
-                        Conversation Design Challenge</a> - 👀 On my ToDos</li>
+                        Conversation Design Challenge</a> - 👀 On my ToDos.</li>
                     <li class="body-regular"><a href="https://randomprojectgenerator.com/project/ux-ui">Random Project
                         Generator</a></li>
                   </ul>
@@ -126,9 +126,9 @@
                     <li class="body-regular"><a href="https://uxwriterconference.com/">UX Writer Conference</a></li>
                     <li class="body-regular"><a href="https://workingincontent.com/perspectives">Perspectives</a> (free
                       track!) - An
-                      AMAZING conference. It happened for the first time in 2022. Last I heard it was TBD whether it
-                      would futue events. I hope so. 🤞 It was THAT good.</li>
-                    <li class="body-regular"><a href="https://www.buttonconf.com/">Button</a> - 👀 On my ToDos</li>
+                      AMAZING conference. It happened for the first time in 2022. Last I heard it was TBD whether there
+                      would be future events. I hope so. 🤞 It was THAT good.</li>
+                    <li class="body-regular"><a href="https://www.buttonconf.com/">Button</a> - 👀 On my ToDos.</li>
                   </ul>
 
                   <h3>Mentorship</h3>
@@ -143,9 +143,8 @@
                   <ul class="indent">
                     <li class="body-regular"><a href="https://www.figma.com/">Figma</a> - For Designing, but also
                       checkout FigJam for whiteboarding!</li>
-                    <li class="body-regular"><a href=" https://trello.com/">Trello</a> - 10 project management boards in
-                      the free tier</li>
-                    <li class="body-regular"><a href="https://miro.com/">Miro</a> - Whiteboarding</li>
+                    <li class="body-regular"><a href=" https://trello.com/">Trello</a></li>
+                    <li class="body-regular"><a href="https://miro.com/">Miro</a></li>
                   </ul>
                   <p class="body-regular">(Ask about my favorite Udemy courses for learning Figma.)
                   </p>
