fixed email links in footer. add email for case study link in hs

--- a/work/duxwc_day12.html
+++ b/work/duxwc_day12.html
@@ -119,7 +119,7 @@
       <footer class="footie">
         <div class="socials-links">
           <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="../assets/LI-In-Bug.png"></a>
-          <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="../assets/email.png"></a>
+          <a href="mailto: evy.haan@gmail.com"><img class="social-icon" src="../assets/email.png"></a>
           <a href="https://github.com/EvyHaan"><img class="social-icon" src="../assets/GitHub-Mark-64px.png"></a>
         </div>
       </footer>
