--- a/work/handshake_mobile_app.html
+++ b/work/handshake_mobile_app.html
@@ -147,6 +147,14 @@
                   </ul>
                 </div>
 
+                <div class="il_link">
+                  <p class="body-regular">
+                    Curious about my process?
+                    <a href="mailto: evy.haan@gmail.com">Email me</a>
+                    for a full case study.
+                  </p>
+                </div>
+
             </article>
           </section>
         </main>
@@ -155,7 +163,7 @@
       <footer class="footie">
         <div class="socials-links">
           <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="../assets/LI-In-Bug.png"></a>
-          <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="../assets/email.png"></a>
+          <a href="mailto: evy.haan@gmail.com"><img class="social-icon" src="../assets/email.png"></a>
           <a href="https://github.com/EvyHaan"><img class="social-icon" src="../assets/GitHub-Mark-64px.png"></a>
         </div>
       </footer>
