--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             <div class="content-grid">
 
               <div class="image_title">
+                <a href="./work/ahw_visual_brand_guide.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/ahw_cover.jpg" />
+                  <h2>Visual Brand Guide</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
                 <a href="./work/handshake_mobile_app.html">
                   <img class="img landscape" alt="" src="./images/work/work_covers/handshake_app_cover.jpg" />
                   <h2>Handshake Mobile App</h2>
