add an email for full case study link

--- a/work/ahw_visual_brand_guide.html
+++ b/work/ahw_visual_brand_guide.html
@@ -139,6 +139,14 @@
                   </div>
                 </div>
 
+                <div class="il_link">
+                  <p class="body-regular">
+                    Curious about my process?
+                    <a href="mailto: evy.haan@gmail.com">Email me</a>
+                    for a full case study.
+                  </p>
+                </div>
+
             </article>
           </section>
         </main>
