add letterhead article project. include links to Medium

--- a/work/ahw_letterhead_article.html
+++ b/work/ahw_letterhead_article.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Title</title>
+  <title>Article: "Should Board Members Be Listed On Organization Letterhead?”</title>
   <link href="../css/reset.css" rel="stylesheet">
   <link href="../css/base.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,51 +36,56 @@
           <section>
             <article>
               <header class="article-header">
-                <h1 class="article-title">Article Title</h1>
-                <p class="article-subtitle">Article subtitle.</p>
-                <p class="article-subtitle">(Article type)</p>
-                <img class="img" alt="" src="./images/2.jpg" />
+                <h1 class="article-title">"Should Board Members Be Listed On Organization Letterhead?”</h1>
+                <p class="article-subtitle">(Article)</p>
+                <img class="img" alt="" src="../images/work/work_covers/ahw_letterhead_article_cover.jpg" />
               </header>
               <div class="article-body">
                 <div class="body_title_desc">
                   <h2>The Problem</h2>
-                  <p class="body-regular">Description of this aspect of the project.</p>
+                  <p class="body-regular">This question came up while <a class="link"
+                      href="./ahw_visual_brand_guide.html">working on the visual brand
+                      guide</a> for the Alliance
+                    for Historic Wyoming (AHW). The current letterhead featured a list of board members and their
+                    locations, but the decision to keep it was being challenged by the staff who maintained it.</p>
+                  <p class="body-regular">There were several challenges:</p>
+                  <ul class="indent">
+                    <li class="body-regular">Staff time as a finite resource</li>
+                    <li class="body-regular">Frequently changing board members</li>
+                    <li class="body-regular">Changes often undermining the strategy behind the decision</li>
+                    <li class="body-regular">A design that wasn’t conducive to maintenance</li>
+                  </ul>
                 </div>
 
                 <div class="body_title_desc">
                   <h2>What I Did</h2>
                   <ul class="indent">
-                    <li class="body-regular">Competitive Analysis</li>
-                    <li class="body-regular">Content Design</li>
-                    <li class="body-regular">Microcopy</li>
+                    <li class="body-regular">Research</li>
+                    <li class="body-regular">Write an Article</li>
                   </ul>
-                </div>
-
-                <div class="body_image_caption">
-                  <figure>
-                    <img class="img" src="./images/1.jpeg" />
-                    <figcaption>Fig #. Caption for the image.</figcaption>
-                  </figure>
                 </div>
 
                 <div class="body_title_desc">
                   <h2>The Solution</h2>
-                  <p class="body-regular">Description of this aspect of the project. Should be reasonably short but long
-                    enough to discuss the appropriate topic at hand in reasonable detail.</p>
+                  <p class="body-regular">My goal was to bring both sides together for a meaningful, objective
+                    conversation. I framed a response in terms of the return on investment (ROI) for implementing this
+                    branding element within a marketing strategy. By examining each aspect of investment in the design
+                    and upkeep of this element against the purpose of using the element in the first place, it’s easier
+                    to gauge a truer personal value of the ROI.</p>
                 </div>
 
                 <div class="body_title_desc">
                   <h2>The Big 'So What?'</h2>
-                  <p class="body-regular">Description of this aspect of the project. Should be reasonably short but long
-                    enough to discuss the appropriate topic at hand in reasonable detail.</p>
+                  <p class="body-regular">Returning to the strategic plan can be grounding for different teams that are
+                    working toward a common goal. Stepping the conversation back to an overview level can help realign
+                    perspectives and provide the objectivity needed for making challenging decisions.</p>
                 </div>
 
                 <div class="body_title_desc">
                   <h2>The Tools</h2>
                   <ul class="indent">
-                    <li class="body-regular">Tool</li>
-                    <li class="body-regular">Tool</li>
-                    <li class="body-regular">Tool</li>
+                    <li class="body-regular">Google Docs</li>
+                    <li class="body-regular">Medium</li>
                   </ul>
                 </div>
 
