--- a/work/duxwc_day8.html
+++ b/work/duxwc_day8.html
@@ -123,6 +123,7 @@
         <div class="socials-links">
           <a href="https://www.linkedin.com/in/evyhaan/"><img class="social-icon" src="../assets/LI-In-Bug.png"></a>
           <a href="mailto: evy.haan@gmail.com"><img class="social-icon" src="../assets/email.png"></a>
+          <a href="https://medium.com/@evy.haan"><img class="social-icon" src="../assets/medium-logo.png"></a>
           <a href="https://github.com/EvyHaan"><img class="social-icon" src="../assets/GitHub-Mark-64px.png"></a>
         </div>
       </footer>
