add article link and fix resume typo

--- a/work/ahw_letterhead_article.html
+++ b/work/ahw_letterhead_article.html
@@ -61,12 +61,15 @@
                   <h2>What I Did</h2>
                   <ul class="indent">
                     <li class="body-regular">Research</li>
-                    <li class="body-regular">Write an Article</li>
+                    <li class="body-regular">Wrote an article</li>
                   </ul>
                 </div>
 
                 <div class="body_title_desc">
                   <h2>The Solution</h2>
+                  <a class="link body-regular"
+                    href="https://medium.com/@evy.haan/should-board-members-be-listed-on-organization-letterhead-b36d7921b8c0">Read
+                    the article on Medium...</a>
                   <p class="body-regular">My goal was to bring both sides together for a meaningful, objective
                     conversation. I framed a response in terms of the return on investment (ROI) for implementing this
                     branding element within a marketing strategy. By examining each aspect of investment in the design
