--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             <div class="content-grid">
 
               <div class="image_title">
+                <a href="./work/pillsy.html">
+                  <img class="img landscape" alt="" src="./images/work/work_covers/pillsy_cover.jpg" />
+                  <h2>Pillsy - "Add a Helper" Flow Revision</h2>
+                </a>
+              </div>
+
+              <div class="image_title">
                 <a href="./work/ahw_letterhead_article.html">
                   <img class="img landscape" alt="" src="./images/work/work_covers/ahw_letterhead_article_cover.jpg" />
                   <h2>Article: "Should Board Members Be Listed On Organization Letterhead?”</h2>
