--- a/work/pillsy.html
+++ b/work/pillsy.html
@@ -83,13 +83,73 @@
 
                 <div class="body_title_desc">
                   <h2>The Big 'So What?'</h2>
-                  <p class="body-regular">Confidence in the app increased by 8% for Pillsy users and 11% for their
-                    helpers.</p>
+                  <p class="body-regular"><strong>Confidence in the app increased by 8% for Pillsy users and 11% for
+                      their helpers.</strong></p>
                   <p class="body-regular">To make assumptions that a user will follow the flow as a perfect use case
                     every time means being underprepared for handling stress cases. When thought about early, there is
                     time to preemptively create an empathic experience through less-than-ideal circumstances.
                   </p>
+                </div>
 
+                <div class="body_title_desc">
+                  <h2>The Highlights</h2>
+                  <h3>"Helpers" Tab in the Dashboard (Empty State)</h3>
+                </div>
+
+                <div class="dual-image-display">
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/dashboard_helpers_original.jpg" />
+                    <figcaption>Original "Helpers" Tab.</figcaption>
+                  </figure>
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/dashboard_helpers_revised.jpg" />
+                    <figcaption>Revised "Helpers" Tab.</figcaption>
+                  </figure>
+                </div>
+
+                <div class="body_title_desc">
+                  <h3>Manually Add a Helper</h3>
+                </div>
+
+                <div class="tri-image-display">
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/add_a_helper_original.jpg" />
+                    <figcaption>Original "Invite a Helper" screen.</figcaption>
+                  </figure>
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/add_a_helper_revised.jpg" />
+                    <figcaption>Revised "Invite a Helper" screen.</figcaption>
+                  </figure>
+                </div>
+
+                <div class="body_title_desc">
+                  <h3>SMS Messaging: Accepted</h3>
+                </div>
+
+                <div class="tri-image-display">
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/sms_accepted_original.jpg" />
+                    <figcaption>Original SMS interaction.</figcaption>
+                  </figure>
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/sms_accepted_revised.jpg" />
+                    <figcaption>Revised SMS interaction.</figcaption>
+                  </figure>
+                </div>
+
+                <div class="body_title_desc">
+                  <h3>SMS Messaging: Declined</h3>
+                </div>
+
+                <div class="tri-image-display">
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/sms_declined_original.jpg" />
+                    <figcaption>Original SMS interaction.</figcaption>
+                  </figure>
+                  <figure>
+                    <img class="img portrait" src="../images/work/pillsy/sms_declined_revised.jpg" />
+                    <figcaption>Revised SMS interaction.</figcaption>
+                  </figure>
                 </div>
 
                 <div class="body_title_desc">
